--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
             </div>
             <div class="btn-container">
                 <button class="btn-clear">AC</button>            
-                <button class="btn-divide">/</button>
-                <button class="btn-multiply">X</button>
-                <button class="btn-seven">7</button>
-                <button class="btn-eight">8</button>
-                <button class="btn-nine">9</button>
-                <button class="btn-subtract">-</button>
-                <button class="btn-four">4</button>
-                <button class="btn-five">5</button>
-                <button class="btn-six">6</button>
-                <button class="btn-add">+</button>
+                <button class="btn-divide operator">÷</button>
+                <button class="btn-multiply operator">x</button>
+                <button class="btn-seven number">7</button>
+                <button class="btn-eight number">8</button>
+                <button class="btn-nine number">9</button>
+                <button class="btn-subtract operator">-</button>
+                <button class="btn-four number">4</button>
+                <button class="btn-five number">5</button>
+                <button class="btn-six number">6</button>
+                <button class="btn-add operator">+</button>
                 <div class="equals-spacer-container">
                     <div class="equals-spacer">
-                        <button class="btn-one">1</button>
-                        <button class="btn-two">2</button>
-                        <button class="btn-three">3</button>
+                        <button class="btn-one number">1</button>
+                        <button class="btn-two number">2</button>
+                        <button class="btn-three number">3</button>
                         <button class="btn-zero">0</button>
                         <button class="btn-decimal">.</button>
                     </div>
