--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="btn-container">
                 <button class="btn-clear">C</button>
                 <button class="btn-backspace">⌫</button>       
-                <button class="btn-divide operator">÷</button>
+                <button class="btn-divide operator">/</button>
                 <button class="btn-seven number">7</button>
                 <button class="btn-eight number">8</button>
                 <button class="btn-nine number">9</button>
