Finish design and add keyboard support

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Calculator</title>
+    <title>Eepy Calculator</title>
 </head>
 <body>
     <div class="calculator-container">
@@ -35,6 +36,14 @@
             </div>       
         </div>
     </div>
+        <footer>
+        <div class="footer-container">
+            <p class="credits">Made by Vitt</p>
+            <a href="https://github.com/Vittv" target="_blank" class ="github-icon">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
+    </footer>
     <script src="src/script.js"></script>
 </body>
 </html>
