--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <button class="btn-two number">2</button>
                 <button class="btn-three number">3</button>
                 <button class="btn-add operator">+</button>
-                <button class="btn-zero">0</button>
+                <button class="btn-zero number">0</button>
                 <button class="btn-decimal">.</button>
                 <button class="btn-equals">=</button> 
             </div>       
